docs: fix comment docs
